# lite-script

./: CMakeLists.txt  LICENSE  MEMO.txt  README.md  main.cpp
docs/: index.html
docs/content/1.0/: fr.js
docs/css/: customize.css  theme.css
docs/js/: highlight.min.js  manager.js  request.js
examples/: CMakeLists.txt  README.md
examples/assembly/: CMakeLists.txt  assembly.cpp  fibonacci.txt
examples/script/: CMakeLists.txt  fibonacci.txt  script.cpp
src/: CMakeLists.txt  litescript.hpp  nullable.hpp  streamer.hpp
src/api/: script.cpp  script.hpp  types.cpp  types.hpp
src/memory/: basic_memory.cpp  basic_memory.hpp  memory.cpp  memory.hpp  object.cpp  object.hpp  type.cpp  type.hpp  variable.cpp  variable.hpp
src/script/: assembly.cpp  assembly.hpp  executor.cpp  executor.hpp  instruction.cpp  instruction.hpp  namer.cpp  namer.hpp  script.cpp  script.hpp  state.cpp  state.hpp  syntax.cpp  syntax.hpp
src/types/: array.cpp  array.hpp  boolean.cpp  boolean.hpp  callback.cpp  callback.hpp  character.cpp  character.hpp  class.cpp  class.hpp  class_object.cpp  class_object.hpp  internal.cpp  internal.hpp  namespace.cpp  namespace.hpp  null.cpp  null.hpp  number.cpp  number.hpp  object.cpp  object.hpp  string.cpp  string.hpp  type_boolean.cpp  type_boolean.hpp  type_null.cpp  type_null.hpp  undefined.cpp  undefined.hpp
